style.css
* {
  margin: 0px;
  box-sizing: border-box;
  color: #CBC9CF;
  font-family: 'Montserrat';
  font-weight: 300;
}

input {
    border: none;
    border-bottom: 1px solid #CBC9CF;
}
header {
  background-color: #46424D;
  width: 100%;
  height: 10%;
}

header h1 {
  color: #FFF;
  text-align: center;
}

/* p {
  margin-left: 10%;
  /* margin-top: 5%;
  margin-bottom: 10px; */


/* temporary width placeholder */
button {
  height: 50px;
  width: 150px;
  border-radius: 4px;
  border-width: 2px;
  background-color: #46424D;
  display: flex;
  align-items: center;
  flex-direction: column;
  font-size: 15px;
}

button img {
  height: 18px;
  width: 18px;
  clear: both;
}

#error-icon {
  height: 20px;
  width: 20px;
  fill: #B3FD78;
  margin-top: 15px;
}

#start-button {
  height: 30px;
  width: 180px;
  border-radius: 2px;
  background-color: #CBC9CF;
  color: #46424D;
  margin-bottom: 30px;
  align-self: flex-end;
}

.alignment {
  display: flex;
  background-color: #2B2733;
}

.main-content {
  width: 65%;
  height: 90%;
  align-items: center;
}

.left-section, .timer-section {
  background-color: #46424D;
  box-shadow: 5px 10px #26222D;
  height: 85%;
  margin: 3%;
  display: flex;
  flex-flow: column wrap;
  flex-wrap: wrap;
  font-weight: bold;
  padding: 3% 10% 3% 10%;
}

.left-section p {
  margin-bottom: 5%;
  padding-bottom: 5%;
}

/* temorary hide */
.timer-section {
  /* display: none; */
  display: flex;
  flex-direction: column;
  align-content: center;
}

.right-section {
  width: 35%;
  border-left: 2px solid #46424D;
  padding: 20px;
}

.category-selection {
  height: 35%;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.goal-form {
  display: flex;
  flex-flow: column;
  /* height: 65%;
  width: 100%; */
  /* margin-top: 40px; */
  /* margin-left: 08% */
  /* display:flex;
  flex-wrap: wrap; */
}

.minutes {
  width: 50%;
  display: flex;
  flex-flow: column;
}
.seconds{
 width: 50%;
 display: flex;
 flex-flow: column;
}

#time-wrapper {
  display: flex;
  justify-content: space-between;
}

#category-label {
  margin-bottom: 2%;
}

#goal-input {
  /* margin-left: 10%; */
  /* margin-right: 10%; */
  margin-top: 30px;
  /* width: 80%; */
  background: transparent;
  /* border: none; */
  /* border-bottom: 1px solid #CBC9CF; */
}

#duration-minutes {
  margin-top: 30px;
  margin-right: 5%;
  /* margin-left: 0px;
  /* margin-bottom: 00px; */
  background: transparent;
  /* border: none;
  border-bottom: 1px solid #CBC9CF; */
}

#duration-seconds {
  /* margin-left: 0px;
  margin-right: 50px; */
  margin-top: 30px;
  /* margin-bottom: 0px; */
  background: transparent;
  /* border: none;
  border-bottom: 1px solid #CBC9CF; */
}

/* .hide {
  opacity: 0;
  transition: opacity .25s ease-in-out;
} */

.remove {
  display: none;
}

/* form * {
  margin: 20px;
} */


.green {
  color: #B3FD78;
  border-color: #B3FD78;
}

.green-input {
  border: none;
  border-bottom: 1px solid #B3FD78;
}

.purple {
  color: #C278FD;
  border-color: #C278FD;
}

.purple-input {
  border: none;
  border-bottom: 1px solid #C278FD;
}

.red {
  color: #FD8078;
  border-color: #FD8078;
}

.red-input {
  border: none;
  border-bottom: 1px solid #FD8078;;
}

@media only screen and (max-width: 600px) {
  .alignment {
    flex-direction: column;
    align-items: center;
  }

  .main-content {
    height: auto;
    width: 100%;
    align-items: center;
  }

  .right-section {
    width: 100%;
    border-top: 2px solid #46424D;
  }

  .category-selection {
    align-items: center;
    flex-direction: column;
  }

  .category-selection button {
    width: 75%;
    margin-bottom: 5%;
    display: flex;
    align-items: center;
    flex-direction: column;
  }
}

